<resources>
    <string name="app_name">Paulitas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">acerca de</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pantalla_carga">PantallaCarga</string>


    <!-- Primere pantalla o principal -->
    <string name="como_ordenar">Como ordenar</string>
    <string name="productos">Productos</string>
    <string name="PantallaPrincipal">Principal</string>
    <string name="tituloDisenioPersonalizado">Diseño personalizado de tortas</string>
    <string name="cupcakes_personalizados">* cupcakes personalizados</string>
    <string name="snaks_dulces">* Snaks dulces</string>
    <string name="cualquier_ocasion">* Tortas para cualquier ocasion</string>
    <string name="disenio_person">Diseño personalizado de tortas</string>
    <string name="snaks_salados">* Snaks salados</string>
    <string name="brochetas_dulces">* Brochetas dulces</string>
    <string name="tortas_para_cualquier_ocasion">* Tortas para cualquier ocasion</string>
    <string name="torta_en_forma_de_cerveza">Torta en forma de cerveza</string>
    <string name="excelente_torta_de_vainilla_con_una_cobertura_de_fondat">excelente torta de vainilla con una cobertura de fondat</string>
    <string name="torta_para_doctor">Torta para doctor</string>
    <string name="excelente_torta_de_banano_con_una_cobertura_de_fondat">excelente torta de banano con una cobertura de fondat</string>
    <string name="torta_matrimonio">Torta matrimonio</string>
    <string name="bonita_torta_de_almendras_con_decoracion_de_flores">Bonita torta de almendras con decoracion de flores</string>
    <string name="torta_para_chicas">Torta para chicas</string>
    <string name="bonita_torta_con_ganache_de_chocolate_y_fondant">Bonita torta con ganache de chocolate y fondant</string>
    <string name="torta_para_policia">Torta para policia</string>
    <string name="detalle_de_6_cupcakes_con_estilo_personalizado">Detalle de 6 cupcakes con estilo personalizado</string>
    <string name="brocheta">Brocheta</string>
    <string name="brocheta_de_masmelo_y_royal_icing">brocheta de masmelo y royal icing</string>
    <string name="contactanos">Contactanos!</string>
    <string name="nuestros_numeros_son">Nuestros Numeros son:</string>
    <string name="consulta_donde_nos_encontramos">Consulta donde nos encontramos</string>
    <string name="abrir_mapas">Abrir Mapas</string>
    <string name="atras">Atras</string>

    <!-- Segunda pantalla o principal -->


</resources>
